# autoharn

./: .gitattributes  .gitignore  .gitmodules  ANTHROPIC-FEEDBACK-2026-07-17-security-recommendation-incident.md  BACKLOG.md  CAPABILITIES.md  CLAUDE.md  CONFIGURATION.md  DIRCLASS.md  FINDINGS.md  GLOSSARY.md  HANDOFF.md  OPERATING-CARD.md  ORCH-CAPABILITIES.md  ORCH-DIRCLASS.md  ORCH-HANDOFF.md  ORCH-OPERATING-CARD.md  ORCH-POST-FABLE-OPERATING-BRIEF.md  POST-FABLE-OPERATING-BRIEF.md  README.md  USER-CONFIGURATION.md  USER-GUIDE.md  USER-WALKTHROUGH.md  VESTIGIAL-INDEX.md  WALKTHROUGH.md  asof-export  attest-tags  audit  autoharn  deployment.json  deployment.json.example  distance-to-clean  doctor  extract-context  judge  led  migrate  orchlog  otel-attest  otel-watch  (+2 more)
.claude/: settings.json
attestations/: doc-legibility-attestations.jsonl
bootstrap/: AUDITOR.md  QUICKSTART.md  apply-delta.sh  bootstrap.sh  (+18 more)
experiments/impedance/: .gitignore  DESIGN.md  ERGONOMICS.md  README.md  conftest.py  mypy.ini  pyproject.toml
experiments/impedance/demo/: __init__.py  mismatches.py  pipeline.py  raw_pipeline.py
experiments/impedance/impedance/: __init__.py  adapter.py  dtype.py  host.py  shape.py  tensor.py
experiments/impedance/impedance/lib/: __init__.py  jax_lib.py  jax_lower_lib.py  numpy_lib.py  scipy_lib.py  sklearn_lib.py  torch_lib.py
experiments/impedance/tests/: test_brand_raises.py  test_carrier_runtime.py  test_jax_lower_parity.py  test_optional_and_pin.py  test_pipeline_parity.py  test_typecheck.py
experiments/impedance/tests/fixtures/: carrier_neg.py
(+1882 files in other folders)
