[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "impedance"
version = "0.1.0"
description = "The library-parametric (lib, device, dtype, shape) tensor ACL — cross-library interface impedances unconstructable by construction."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Unlicense" }
# The CORE declares NO numerical library as a hard dependency: impedance/{tensor,dtype,shape,
# adapter,host}.py import none of {torch, numpy, jax, scipy, sklearn}. `import impedance` is
# import-light; a consumer pays only for the adapters it touches (the extras below).
dependencies = []

[project.optional-dependencies]
# each adapter pulls exactly its own library — opt in per adapter.
numpy = ["numpy>=1.26"]
torch = ["torch>=2.0"]
jax = ["jax==0.10.1", "jaxlib==0.10.1"]   # pinned: the lowering/interpret contract is version-fixed
scipy = ["scipy>=1.11"]
sklearn = ["scikit-learn>=1.3"]
# the full demo + test matrix
dev = ["numpy>=1.26", "torch>=2.0", "jax==0.10.1", "jaxlib==0.10.1", "scipy>=1.11", "scikit-learn>=1.3", "mypy>=1.8", "pytest>=8"]

[tool.setuptools]
packages = ["impedance", "impedance.lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
